# aorsf

./: .gitignore  CLAUDE.md  CPP_Unit_Testing_Plan.md  README.Rmd  README.md  Refactoring_Recommendations.md  aorsf.sln
csharp/: README.md  build-native.sh
csharp/Aorsf/: Aorsf.csproj  AorsfException.cs  AorsfHandle.cs  Enums.cs  ModuleInitializer.cs  NativeLibraryResolver.cs  NativeMethods.cs  ObliqueForestClassifier.cs  ObliqueForestRegressor.cs  ObliqueForestSurvival.cs
csharp/Aorsf.Tests/: Aorsf.Tests.csproj  ClassificationTests.cs  RegressionTests.cs  SurvivalTests.cs
csharp/examples/penguin_classification/: README.md
csharp/examples/penguin_classification/PenguinExample/: PenguinExample.csproj  Program.cs
plans/: 2025-12-16-separate-r-interface-from-core.md  2025-12-17-python-wrapper-implementation.md
python/: .coverage  CMakeLists.txt  README.md  pyproject.toml  test_fit.py
python/examples/: classification_example.py  custom_callbacks_example.py  regression_example.py  survival_example.py
python/examples/penguin_classification/: README.md  penguin_example.py
python/pyaorsf/: __init__.py  forest.py  survival.py  utils.py
python/src/: _pyaorsf.cpp
python/src/python/: PythonInterrupts.h  PythonOutput.h  PythonRMath.h
python/tests/: __init__.py  conftest.py  test_classification.py  test_importance.py  test_regression.py  test_serialization.py  test_survival.py
src/: Makevars.ucrt  Makevars.win  Tree.cpp  Tree.h  TreeClassification.cpp  TreeClassification.h  TreeRegression.cpp  TreeSurvival.cpp  orsf_rcpp.cpp
src/c_api/: CMakeLists.txt  README.md  aorsf_c.cpp  aorsf_c.h  aorsf_export.h  aorsf_internal.h  aorsf_serialize.cpp  aorsf_serialize.h
src/c_api/tests/: CMakeLists.txt  test_c_api.c
src/core/: CMakeLists.txt  Callbacks.h  Coxph.cpp  Coxph.h  Data.h  Exceptions.h  Forest.cpp  Forest.h  ForestClassification.cpp  ForestRegression.cpp  ForestSurvival.cpp  Interrupts.h  Makefile  Output.h  RMath.h  Tree.cpp  Tree.h  TreeClassification.cpp  TreeRegression.cpp  TreeRegression.h  TreeSurvival.cpp  TreeSurvival.h  arma_config.h  cmake_install.cmake  utility.cpp  utility.h
src/core/tests/: CMakeLists.txt  test_standalone.cpp  test_survival.cpp
src/rcpp/: RcppCallbacks.h  RcppInterrupts.h  RcppOutput.h  RcppRMath.h
src/tests/: Makefile  README.md  test_coxph.cpp  test_data.cpp  test_main.cpp  test_regression.cpp  test_utility.cpp
